--- a/database/package.json
+++ b/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "explain-ai-database",
+  "name": "explain-database",
   "version": "1.0.0",
   "description": "My Project",
   "main": "index.js",
