--- a/database/package.json
+++ b/database/package.json
@@ -4,7 +4,8 @@
   "description": "My Project",
   "main": "index.js",
   "scripts": {
-    "start": "docker-compose up"
+    "start": "docker-compose up",
+    "start:reset": "sh database-reset.sh && docker-compose up"
   },
   "author": "Me",
   "license": "Commercial"
