--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
