--- a/web/package.json
+++ b/web/package.json
@@ -13,5 +13,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.2"
   }
 }
