--- a/database/metadata/rest_endpoints.yaml
+++ b/database/metadata/rest_endpoints.yaml
@@ -11,6 +11,15 @@
   definition:
     query:
       collection_name: allowed-queries
+      query_name: Topic_All_Audiences
+  methods:
+    - GET
+  name: Topic_All_Audiences
+  url: topic/:slug
+- comment: ""
+  definition:
+    query:
+      collection_name: allowed-queries
       query_name: Topics
   methods:
     - GET
