--- a/database/metadata/query_collections.yaml
+++ b/database/metadata/query_collections.yaml
@@ -13,6 +13,7 @@
               }
               relationships(where: {audience:{_eq:$audience}}) {
                 to {
+                  slug
                   name
                   image
                 }
@@ -34,6 +35,7 @@
               relationships {
                 audience
                 to {
+                  slug
                   name
                   image
                 }
@@ -50,6 +52,7 @@
                 priority
                 description
                 to {
+                  slug
                   name
                 }
               }
