--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -23,10 +23,11 @@ services:
       - ./migrations:/hasura-migrations
       - ./metadata:/hasura-metadata
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@explainai-database-engine:5432/explainai
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
       HASURA_GRAPHQL_DEV_MODE: "true"
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_ADMIN_SECRET: admin_secret
+      DATABASE_URL: postgres://postgres:postgrespassword@explainai-database-engine:5432/explainai
+      DATABASE_NAME: default
 volumes:
   db_data:
