--- a/web/package.json
+++ b/web/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^12.6.0",
+    "vite": "^4.1.4"
   }
 }
