--- a/database/metadata/databases/databases.yaml
+++ b/database/metadata/databases/databases.yaml
@@ -6,4 +6,4 @@
         from_env: DATABASE_URL
       isolation_level: read-committed
       use_prepared_statements: false
-  tables: "!include explain-ai/tables/tables.yaml"
+  tables: "!include default/tables/tables.yaml"
