--- a/database/metadata/query_collections.yaml
+++ b/database/metadata/query_collections.yaml
@@ -10,6 +10,19 @@
               created_at
               descriptions(where: {audience:{_eq:$audience}}) {
                 short
+                long
+              }
+              parent {
+                parent {
+                  slug
+                  name
+                  grandparent: parent {
+                    grandparent: parent {
+                      slug
+                      name
+                    }
+                  }
+                }
               }
               relationships(where: {audience:{_eq:$audience}}) {
                 to {
@@ -30,7 +43,20 @@
               created_at
               descriptions {
                 short
+                long
                 audience
+              }
+              parent {
+                parent {
+                  slug
+                  name
+                  grandparent: parent {
+                    grandparent: parent {
+                      slug
+                      name
+                    }
+                  }
+                }
               }
               relationships {
                 audience
@@ -47,14 +73,7 @@
         query: |
           query TOPICS {
             topic {
+              slug
               name
-              relationships {
-                priority
-                description
-                to {
-                  slug
-                  name
-                }
-              }
             }
           }
