--- a/database/metadata/databases/databases.yaml
+++ b/database/metadata/databases/databases.yaml
@@ -1,9 +1,9 @@
-- name: explain-ai
+- name: default
   kind: postgres
   configuration:
     connection_info:
       database_url:
-        from_env: HASURA_GRAPHQL_DATABASE_URL
+        from_env: DATABASE_URL
       isolation_level: read-committed
       use_prepared_statements: false
-  tables: "!include explain-ai/tables/tables.yaml"
+  tables: "!include default/tables/tables.yaml"
