--- a/web/package.json
+++ b/web/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^12.7.0",
+    "sass": "^1.58.3"
   }
 }
