--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/styles/tailwind.scss -o src/styles/index.scss "
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +46,11 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7",
+    "autoprefixer": "^10.4.13",
     "cypress": "^12.6.0",
-    "jest-localstorage-mock": "^2.4.26"
+    "jest-localstorage-mock": "^2.4.26",
+    "post-cli": "^1.0.5",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.2.7"
   }
 }
