--- a/web/package.json
+++ b/web/package.json
@@ -44,13 +44,16 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^12.6.0",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "cypress": "^12.6.0",
-    "jest-localstorage-mock": "^2.4.26"
+    "jest-localstorage-mock": "^2.4.26",
+    "prettier": "^2.8.4"
   }
 }
