--- a/web/package.json
+++ b/web/package.json
@@ -17,13 +17,15 @@
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.58.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "jest-localstorage-mock": "^2.4.26"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src"
   },
   "eslintConfig": {
     "extends": [
@@ -53,7 +55,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest-localstorage-mock": "^2.4.26",
     "prettier": "^2.8.4"
   }
 }
