--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,6 @@ services:
     environment:
       - DB_ENDPOINT=http://explainai-database-api:8080
       - DB_SECRET=admin_secret
-    network_mode: host
     depends_on:
       - explainai-database-api
     restart: always
@@ -52,7 +51,7 @@ services:
       - WDS_SOCKET_HOST=127.0.0.1
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
-      - REACT_APP_API_ENDPOINT=https://localhost:4000
+      - REACT_APP_API_ENDPOINT=http://explainai-backend-api:4000
     stdin_open: true
     tty: true
 volumes:
