--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
       - WDS_SOCKET_HOST=127.0.0.1
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
-      - REACT_APP_API_ENDPOINT=http://explainai-backend-api:4000
+      - REACT_APP_API_ENDPOINT=http://localhost:4000
     stdin_open: true
     tty: true
 volumes:
