--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,7 +19,8 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: --prefix web npm ci
+        workingDirectory: /web
+        run: npm ci
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
