--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,5 +26,33 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: admin_secret
       DATABASE_URL: postgres://postgres:postgrespassword@explainai-database-engine:5432/postgres
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@explainai-database-engine:5432/postgres
+    explainai-api:
+      container_name: explainai-api
+      image: node:lts-alpine
+      depends_on:
+        - "explainai-database-engine"
+      restart: always
+      volumes:
+        - ./api
+      environment:
+        DB_ENDPOINT: "http://localhost:8080"
+        DB_SECRET: "admin_secret"
+      ports:
+        - "4000:4000"
+    explainai-frontend:
+      container_name: explainai-frontend
+      image: docker-react-i
+      depends_on:
+        - "explainai-api"
+      restart: always
+      volumes:
+        - ./web
+      environment:
+        REACT_APP_API_ENDPOINT: "http://localhost:4000"
+      ports:
+        - "3000:3000"
+
 volumes:
   db_data:
+  web_data:
+  api_data:
