--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,8 @@
     "react-test-renderer": "^18.2.0",
     "sass": "^1.58.3",
     "web-vitals": "^2.1.4",
-    "jest-localstorage-mock": "^2.4.26"
+    "jest-localstorage-mock": "^2.4.26",
+    "eslint": "^8.35.0"
   },
   "scripts": {
     "start": "react-scripts start",
