--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,28 +1,10 @@
 name: Test
-on:
-  push:
-    branches: [yuna-swastik-eslint]
+on: [push]
 
 jobs:
-  run-linters:
-    name: Run linters
+  test_job:
     runs-on: ubuntu-latest
+    name: Test jobs
 
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: cd web && npm ci
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v1
-        with:
-          eslint: true
-          prettier: true
+      -run: echo "Todo"
