--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,14 @@
     "@testing-library/user-event": "^13.5.0",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
+    "jest-localstorage-mock": "^2.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.58.3",
-    "web-vitals": "^2.1.4",
-    "jest-localstorage-mock": "^2.4.26",
-    "eslint": "^8.35.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +47,7 @@
   },
   "devDependencies": {
     "cypress": "^12.6.0",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
