--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,7 +4,11 @@ on: [push]
 jobs:
   test_job:
     runs-on: ubuntu-latest
-    name: Test jobs
-
+    name: Run all tests
     steps:
-      -run: echo "Todo"
+      - run: npm run test
+  lint_job:
+    runs-on: ubuntu-latest
+    name: Check linting
+    steps:
+      - run: npm lint
