--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,10 +7,13 @@ jobs:
     name: Run all tests
     steps:
       - uses: actions/setup-node@v3
+      - run: cd web
+      - run: npm install
       - run: npm run test
   lint_job:
     runs-on: ubuntu-latest
     name: Check linting
     steps:
       - uses: actions/setup-node@v3
+      - run: cd web
       - run: npm lint
