Yuna swastik eslint (#45)
* installed packages

* eslint

* eslint configured

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* fixed errors

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* jest override

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* jest

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* react hook

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* webvitals

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* Fixed linter errors

Co-Authored-By: yuna-iwata <115478706+yuna-iwata@users.noreply.github.com>

* yaml file

Co-authored-by: s-dilip <s-dilip@users.noreply.github.com>

* added prefix path

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* added working dir

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* run

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* moved eslint package

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* v2 to v1

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* unstaged changes

Co-Authored-By: s-dilip <93096031+s-dilip@users.noreply.github.com>

* Removed TopicPage.test.js file

Co-authored-by: yuna-iwata <yuna-iwata@users.noreply.github.com>

* Fixed Tests failing

Co-authored-by: yuna-iwata <yuna-iwata@users.noreply.github.com>

* Fixed linter errors ready to merge

Co-Authored-By: yuna-iwata <115478706+yuna-iwata@users.noreply.github.com>

* Updated button.jsx added type

Co-Authored-By: yuna-iwata <115478706+yuna-iwata@users.noreply.github.com>

* lint fix

* fix lint

* lint

---------

Co-authored-by: s-dilip <93096031+s-dilip@users.noreply.github.com>
Co-authored-by: s-dilip <justsyd224@gmail.com>
Co-authored-by: s-dilip <s-dilip@users.noreply.github.com>
Co-authored-by: Dom Vinyard <dom

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,8 +1,10 @@
 name: Test
 on: [push]
+
 jobs:
   test_job:
     runs-on: ubuntu-latest
-    name: Test Job
+    name: Test jobs
+
     steps:
-      - run: echo "Todo"
+      -run: echo "Todo"
