--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Run all tests
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: ls
       - run: cd ./web
