--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -8,7 +8,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: ls
-      - run: cd ./web
+      - run: cd web
+      - run: ls
       - run: npm install
       - run: npm run test
   lint_job:
