--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,5 +1,9 @@
 name: Test
 on: [push]
+
+defaults:
+  run:
+    working-directory: web
 jobs:
   test_job:
     runs-on: ubuntu-latest
@@ -8,8 +12,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: |
-          cd web
-          ls
           npm install
           npm test
   lint_job:
