--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Check linting
     steps:
+       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
 
       - run: |
