--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,16 +45,14 @@ services:
       - "explainai-api"
     restart: always
     volumes:
-      - web:/web
+      - ./web:/web
+      - /web/node_modules
     environment:
       REACT_APP_API_ENDPOINT: "http://localhost:4000"
     ports:
       - "3000:3000"
     build: ./web
-    stdin_open: true
-    tty: true
 
 volumes:
   db_data:
-  web:
   api:
