--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,7 +19,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm ci
+        run: npm cd web && npm ci
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
