--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,9 +17,12 @@ jobs:
         with:
           node-version: 12
 
+      - name: Change directory to web
+        run: cd web
+
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: cd web && npm ci
+        run: npm ci
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
