--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -22,7 +22,7 @@ jobs:
         run: cd web && npm ci
 
       - name: Run linters
-        working-rectory: /web
+        working-directory: /web
         uses: wearerequired/lint-action@v2
         with:
           eslint: true
