--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,7 +7,8 @@ jobs:
     name: Test jobs
 
     steps:
-      -run: echo "Todo"
+      - name: Check out Git repository
+        uses: actions/checkout@v2
   run_linting:
     runs-on: ubuntu-latest
     name: Lint Action
