--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -2,13 +2,13 @@ name: MB actions Test
 on: [push]
 
 jobs:
-  test_job:
-    runs-on: ubuntu-latest
-    name: Test jobs
+  # test_job:
+  #   runs-on: ubuntu-latest
+  #   name: Test jobs
 
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Check out Git repository
+  #       uses: actions/checkout@v2
   run_linting:
     runs-on: ubuntu-latest
     name: Lint Action
