--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,18 +1,27 @@
-name: MB actions Test
+name: Lint
+
 on: [push]
 
 jobs:
-  # test_job:
-  #   runs-on: ubuntu-latest
-  #   name: Test jobs
-
-  #   steps:
-  #     - name: Check out Git repository
-  #       uses: actions/checkout@v2
-  run_linting:
+  run-linters:
+    name: Run linters
     runs-on: ubuntu-latest
-    name: Lint Action
-    uses: wearerequired/lint-action@v2.3.0
-    with:
-      eslint: true
-      prettier: true
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
+      # ESLint and Prettier must be in `package.json`
+      - name: Install Node.js dependencies
+        run: npm ci
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          eslint: true
+          prettier: true
