--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -18,7 +18,8 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm ci
+        run: npm install ESLint
+        run: npm install Prettier
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
