--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -18,7 +18,7 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Install Node.js dependencies
-        run: npm install esLint prettier
+        run: npm install eslint prettier
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
