--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -3,25 +3,8 @@ name: Lint
 on: [push]
 
 jobs:
-  run-linters:
-    name: Run linters
+  eslint:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies
-        run: npm install eslint prettier
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
+      - uses: actions/checkout@v3
+      - uses: wearerequired/lint-action@v2.3.0
