--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,10 +17,11 @@ jobs:
           node-version: 16
 
       # ESLint and Prettier must be in `package.json`
-      - name: change to web
-        run: cd web
       - name: install node packages
-        run: pwd
+        run: |
+          pwd
+          cd ../web
+          npm install
       - name: Run linters
         uses: wearerequired/lint-action@v2
         with:
