--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -21,6 +21,7 @@ jobs:
         run: |
           pwd
           ls
+          cd ./web
           npm install
       - name: Run linters
         uses: wearerequired/lint-action@v2
