--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,12 +19,10 @@ jobs:
       # ESLint and Prettier must be in `package.json`
       - name: install node packages
         run: |
-          pwd
-          ls
           cd ./web
-          npm install
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
+          npm ci
+      - name: Run linter
+        uses: wearerequired/lint-action@v2.3.0
         with:
           eslint: true
           prettier: true
