--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,9 +17,8 @@ jobs:
           node-version: 16
 
       # ESLint and Prettier must be in `package.json`
-      - name: install node packages
+      - name: install node packages and run linter
         run: |
           cd ./web
           npm ci
-      - name: Run linter
-        run: npm run lint
+          npm run lint
