--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,7 +6,9 @@ jobs:
   run-linters:
     name: Run linters
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./web
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v3
@@ -19,6 +21,5 @@ jobs:
       # ESLint and Prettier must be in `package.json`
       - name: install node packages and run linter
         run: |
-          cd ./web
           npm ci
           npm run lint
