--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -20,10 +20,13 @@ jobs:
 
       - name: install node packages
         run: npm ci
-      - name: run linter
+
+      - name: Run linter
         run: npm run lint
+
     run-tests:
       name: Run Tests
+      runs-on: ubuntu-latest
       steps:
         - name: Check out Git repository
           uses: actions/checkout@v3
