--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -26,10 +26,8 @@ jobs:
 
       - name: Run linters
         run: npm run lint
-        # uses: wearerequired/lint-action@v2.3.0
-        # with:
-        #   eslint: true
-        #   prettier: true
 
-      - name: Run Tests
-        run: npm test
+        jobs:
+          run-tests:
+            name: Run Tests
+            run: npm test
