--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: print dir
-        run: pwd
+      - name: print package.json
+        run: cat package.json
       - name: Run Test
         run: npm test
