--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
