--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,10 +1,42 @@
-name: Test
+name: Lint
+
 on: [push]
 
+defaults:
+  run:
+    working-directory: ./web
 jobs:
-  test_job:
+  run-linters:
+    name: Run Linter
     runs-on: ubuntu-latest
-    name: Test jobs
-
     steps:
-      -run: echo "Todo"
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: install node packages
+        run: npm ci
+
+      - name: Run linter
+        run: npm run lint
+
+  run-tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: run-linters
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: install node packages
+        run: npm ci
+      - name: Run Test
+        run: npm test
