--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "jest-localstorage-mock": "^2.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
@@ -58,10 +59,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.4",
     "jest-localstorage-mock": "^2.4.26",
     "post-cli": "^1.0.5",
     "postcss-import": "^15.1.0",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
   }
 }
