--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,11 @@
 {
   "name": "web",
   "jest": {
-    "resetMocks": false
+    "resetMocks": false,
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
+      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+    }
   },
   "version": "0.1.0",
   "private": true,
