--- a/web/package.json
+++ b/web/package.json
@@ -62,10 +62,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest-localstorage-mock": "^2.4.26",
     "post-cli": "^1.0.5",
     "postcss-import": "^15.1.0",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
   }
 }
