--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -58,10 +59,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.4",
     "jest-localstorage-mock": "^2.4.26",
     "post-cli": "^1.0.5",
     "postcss-import": "^15.1.0",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
   }
 }
