--- a/web/package.json
+++ b/web/package.json
@@ -58,10 +58,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.4",
     "jest-localstorage-mock": "^2.4.26",
+    "jest-transform-stub": "^2.0.0",
     "post-cli": "^1.0.5",
     "postcss-import": "^15.1.0",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
   }
 }
