--- a/web/package.json
+++ b/web/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest-localstorage-mock": "^2.4.26",
+    "jest-transform-stub": "^2.0.0",
     "post-cli": "^1.0.5",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.4",
