--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start:reset": "sh database/database-reset.sh && docker-compose up"
   },
   "author": "Me",
-  "license": "Commercial"
+  "license": "Commercial",
+  "dependencies": {
+    "prop-types": "^15.8.1"
+  }
 }
