--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "generate": "node generate.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "slug": "^8.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
