--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,7 @@ services:
       - "/app/node_modules"
     environment:
       - REACT_APP_API_ENDPOINT=http://localhost:4000
+      - REACT_APP_MEASUREMENT_ID=G-NDPH0VPH2Y
     stdin_open: true
     tty: true
 volumes:
