--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -40,3 +40,5 @@ jobs:
         run: npm ci
       - name: Run Test
         run: npm test
+        env:
+          REACT_APP_MEASUREMENT_ID: "measurement-ID"
