--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "jest-localstorage-mock": "^2.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
