--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,39 +6,53 @@ defaults:
   run:
     working-directory: ./web
 jobs:
-  run-linters:
-    name: Run Linter
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
+  # run-linters:
+  #   name: Run Linter
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out Git repository
+  #       uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 16
 
-      - name: install node packages
-        run: npm ci
+  #     - name: install node packages
+  #       run: npm ci
 
-      - name: Run linter
-        run: npm run lint
+  #     - name: Run linter
+  #       run: npm run lint
 
-  run-tests:
-    name: Run Tests
+  # run-tests:
+  #   name: Run Tests
+  #   runs-on: ubuntu-latest
+  #   needs: run-linters
+  #   steps:
+  #     - name: Check out Git repository
+  #       uses: actions/checkout@v3
+
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 16
+  #     - name: install node packages
+  #       run: npm ci
+  #     - name: Run Test
+  #       run: npm test
+  #       env:
+  #         REACT_APP_MEASUREMENT_ID: "measurement-ID"
+
+  run-cypress-tests:
+    name: run Cypress tests
     runs-on: ubuntu-latest
     needs: run-linters
     steps:
-      - name: Check out Git repository
+      - name: Checkout GitCode
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Run Cypress Test
+        uses: cypress-io/github-action@v5.1.0
         with:
-          node-version: 16
-      - name: install node packages
-        run: npm ci
-      - name: Run Test
-        run: npm test
-        env:
-          REACT_APP_MEASUREMENT_ID: "measurement-ID"
+          build: npm run build
+          start: npm start
