--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -53,5 +53,4 @@ jobs:
       - name: Run Cypress Test
         uses: cypress-io/github-action@v5.1.0
         with:
-          build: npm run build
-          start: npm start
+          browser: chrome
