--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -50,14 +50,7 @@ jobs:
       - name: Checkout GitCode
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: install node packages
-        run: npm ci
-
       - name: Run Cypress Test
-        uses: cypress-io/github-action@v5.1.0
+        uses: cypress-io/github-action@v5
         with:
-          browser: chrome
+          command: npx cypress run --component
