--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cypress/github-action": "^5.2.0",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
